# bustan

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  lefthook.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: adoption_feedback.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  published-package-verification.yml  release-please.yml
docs/: API_REFERENCE.md  COMPARISONS.md  ESCAPE_HATCHES.md  FIRST_APP.md  LIFECYCLE.md  PLATFORM_INTEGRATION.md  README.md  RELEASE_CHECKLIST.md  REQUEST_PIPELINE.md  REQUEST_SCOPED_PROVIDERS.md  ROUTING.md  STABILITY.md  TROUBLESHOOTING.md  VERSIONING.md
examples/: README.md  __init__.py  dynamic_module_usage.py
examples/blog_api/: README.md  app.py  pyproject.toml
examples/blog_api/src/blog_api/: __init__.py  app.py  app_module.py  blog_controller.py  blog_module.py  blog_service.py  identity_module.py  models.py  post_repository.py  request_actor.py
examples/blog_api/tests/blog_api/: test_app.py
examples/dynamic_module_usage/: README.md  pyproject.toml
examples/dynamic_module_usage/src/dynamic_module_usage/: __init__.py  app.py  app_controller.py  app_module.py  cache_module.py  cache_service.py
examples/dynamic_module_usage/tests/dynamic_module_usage/: test_app.py
examples/graph_inspection/: README.md  app.py  pyproject.toml
examples/graph_inspection/src/graph_inspection/: __init__.py  app.py  app_module.py  catalog_controller.py  catalog_module.py  catalog_service.py
examples/multi_module_app/: README.md  app.py  pyproject.toml
examples/request_scope_pipeline_app/: README.md  app.py  pyproject.toml
examples/request_scope_pipeline_app/src/request_scope_pipeline_app/: __init__.py  account_controller.py  app.py  app_module.py  authenticated_guard.py  profile_service.py  request_envelope_interceptor.py  request_identity.py
examples/request_scope_pipeline_app/tests/request_scope_pipeline_app/: test_app.py
examples/testing_overrides/: README.md  app.py  pyproject.toml
examples/testing_overrides/src/testing_overrides/: __init__.py  app.py  app_module.py  fake_greeting_service.py  greeting_controller.py  greeting_service.py
examples/testing_overrides/tests/testing_overrides/: test_app.py
release/: config.json  manifest.json
scripts/: check_markdown_links.py  generate_api_reference.py  package_smoke_check.py  run_examples.py  smoke_test_docs.py
src/bustan/: __init__.py  _version.py  application.py  cli.py  container.py  decorators.py  errors.py  injection.py  lifecycle.py  metadata.py  module_graph.py  params.py  responses.py  routing.py  utils.py
src/bustan/addons/: __init__.py  context.py  discovery.py  module_ref.py
src/bustan/app/: application.py  bootstrap.py  lifespan.py
src/bustan/cli/: main.py
src/bustan/cli/templates/app/: .gitignore  README.md  __init__.py  app.controller.py  app.module.py  app.py  app.service.py  app_controller.py  app_init.py  app_module.py  app_service.py  pyproject.toml  test_app.py  test_app_controller.py  test_app_module.py  test_app_service.py
src/bustan/common/: constants.py  types.py
src/bustan/config/: __init__.py  config_module.py  config_service.py  env_loader.py
src/bustan/core/: errors.py  utils.py
src/bustan/logger/: __init__.py  logger.py  logger_service.py  observability.py
src/bustan/openapi/: __init__.py  decorators.py  document_builder.py  schema_builder.py  swagger_ui.py
src/bustan/pipeline/: __init__.py  auth.py  built_in_pipes.py  context.py  decorators.py  filters.py  guards.py  interceptors.py  metadata.py  middleware.py  pipes.py
src/bustan/security/: __init__.py  cors.py  policy.py  throttler.py
src/bustan/testing/: __init__.py  builder.py  overrides.py
src/star/: __init__.py  _version.py  application.py  cli.py  container.py  decorators.py  errors.py  metadata.py  module_graph.py  params.py  responses.py
src/star/pipeline/: __init__.py  context.py  filters.py  guards.py  interceptors.py
src/star/testing/: __init__.py  builder.py  overrides.py
tests/integration/: test_create_app.py  test_lifecycle.py  test_request_pipeline.py  test_routing.py  test_testing_utilities.py
tests/integration/app/: test_create_app.py  test_discovery_service.py  test_lifecycle.py
tests/integration/openapi/: test_swagger.py
tests/integration/pipeline/: test_global_pipeline.py  test_middleware.py  test_request_pipeline.py
tests/integration/platform/: test_adapter_conformance.py  test_exception_filters.py  test_interceptor_runtime.py  test_middleware_attachment.py  test_observability.py
tests/integration/security/: test_policy_plan.py
tests/integration/testing/: test_controller_harness.py  test_testing_utilities.py
tests/manual/: test_factory_manual.py
tests/unit/: test_api_reference_generation.py  test_cli.py  test_container.py  test_decorators.py  test_dynamic_modules.py  test_error_payloads.py  test_markdown_link_check.py  test_metadata.py  test_module_graph.py  test_params.py  test_public_api.py  test_responses.py  test_route_compilation.py  test_spec_contract_lock.py  test_testing_builder.py  test_version.py
tests/unit/app/: test_application_api.py  test_application_context.py  test_application_internals.py  test_factory.py  test_listen.py
tests/unit/cli/: test_cli.py
tests/unit/common/: test_reflector.py
tests/unit/config/: test_config_module.py  test_config_service.py
tests/unit/core/: test_discovery_service.py  test_module_ref.py  test_utils.py
tests/unit/logger/: test_logger.py  test_observability_hooks.py
tests/unit/openapi/: test_contract_native_generation.py  test_schema_generation.py
tests/unit/pipeline/: test_builtin_pipes.py  test_exception_filters.py  test_execution_context.py  test_interceptor_runtime.py  test_middleware_registry.py  test_pipes_runtime.py  test_policy_guard.py  test_policy_plan_compiler.py  test_validation_pipe.py
tests/unit/security/: test_cors.py  test_throttler.py
tests/unit/testing/: test_controller_harness.py  test_route_snapshots.py  test_testing_builder.py
(+87 files in other folders)
